@@ -1,3 +1,9 @@
+1998-09-30  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* hex-document.[ch], gnome-support.c, main.c: replaced
+	current session managment code with new one using
+	gnome-mdi-session session managment from libgnomeui.
+
 1998-09-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
 	* hex-document.c: Added shortcut support
